// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExperimentDetails fetches this experiment's recurring runs 1`] = `
<div
  className="page"
>
  <div
    className="page"
  >
    <div
      className="cardRow"
    >
      <WithStyles(Paper)
        className="card recurringRunsCard cardActive"
        elevation={0}
        id="recurringRunsCard"
      >
        <div>
          <div
            className="cardTitle"
          >
            recurringRunConfigs
          </div>
          <div
            className="cardContent recurringRunsActive"
          >
            1 experiments:active
          </div>
          <WithStyles(Button)
            className="cardBtn"
            disableRipple={true}
            id="manageExperimentRecurringRunsBtn"
            onClick={[Function]}
          >
            common:manage
          </WithStyles(Button)>
        </div>
      </WithStyles(Paper)>
      <WithStyles(Paper)
        className="card runStatsCard"
        elevation={0}
        id="experimentDescriptionCard"
      >
        <div
          className="cardTitle"
        >
          <span>
            experimentDescription
          </span>
          <WithStyles(Button)
            className="popOutIcon popOutButton"
            id="expandExperimentDescriptionBtn"
            onClick={[Function]}
          >
            <WithStyles(Tooltip)
              title="common:readMore"
            >
              <pure(LaunchIcon)
                style={
                  Object {
                    "fontSize": 18,
                  }
                }
              />
            </WithStyles(Tooltip)>
          </WithStyles(Button)>
        </div>
        <div
          key="0"
          style={
            Object {
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          mock experiment description
        </div>
      </WithStyles(Paper)>
    </div>
    <Toolbar
      actions={
        Object {
          "archive": Object {
            "action": [Function],
            "disabled": true,
            "disabledTitle": "common:selectResourceArchive",
            "id": "archiveBtn",
            "title": "common:archive",
            "tooltip": "common:archive",
          },
          "cloneRun": Object {
            "action": [Function],
            "disabled": true,
            "disabledTitle": "common:selectRunClone",
            "id": "cloneBtn",
            "style": Object {
              "minWidth": 100,
            },
            "title": "common:cloneRun",
            "tooltip": "common:copyRunInitialState",
          },
          "compare": Object {
            "action": [Function],
            "disabled": true,
            "disabledTitle": "common:selectRunsCompare",
            "id": "compareBtn",
            "style": Object {
              "minWidth": 125,
            },
            "title": "common:compareRuns",
            "tooltip": "common:compareUpToTenRuns",
          },
          "newRecurringRun": Object {
            "action": [Function],
            "icon": [Function],
            "id": "createNewRecurringRunBtn",
            "outlined": true,
            "style": Object {
              "minWidth": 195,
            },
            "title": "common:createRecurRun",
            "tooltip": "common:createNewRecurRun",
          },
          "newRun": Object {
            "action": [Function],
            "icon": [Function],
            "id": "createNewRunBtn",
            "outlined": true,
            "primary": true,
            "style": Object {
              "minWidth": 130,
            },
            "title": "common:createRun",
            "tooltip": "common:createNewRun",
          },
        }
      }
      breadcrumbs={Array []}
      pageTitle="runs"
      t={[Function]}
      topLevelToolbar={false}
    />
    <RunList
      experimentIdMask="some-mock-experiment-id"
      hideExperimentColumn={true}
      history={
        Object {
          "push": [MockFunction],
        }
      }
      location={Object {}}
      match={
        Object {
          "params": Object {
            "eid": "some-mock-experiment-id",
          },
        }
      }
      onError={[Function]}
      onSelectionChange={[Function]}
      selectedIds={Array []}
      storageState="STORAGESTATE_AVAILABLE"
      t={[Function]}
      toolbarProps={
        Object {
          "actions": Object {
            "refresh": Object {
              "action": [Function],
              "id": "refreshBtn",
              "title": "common:refresh",
              "tooltip": "common:refreshList",
            },
          },
          "breadcrumbs": Array [
            Object {
              "displayName": "common:experiments",
              "href": "/experiments",
            },
          ],
          "pageTitle": "some-mock-experiment-id",
          "t": [Function],
        }
      }
      updateBanner={[MockFunction]}
      updateDialog={[MockFunction]}
      updateSnackbar={[MockFunction]}
      updateToolbar={[MockFunction]}
    />
    <WithStyles(Dialog)
      classes={
        Object {
          "paper": "recurringRunsDialog",
        }
      }
      onClose={[Function]}
      open={false}
    >
      <WithStyles(DialogContent)>
        <RecurringRunsManager
          experimentId="some-mock-experiment-id"
          history={
            Object {
              "push": [MockFunction],
            }
          }
          location={Object {}}
          match={
            Object {
              "params": Object {
                "eid": "some-mock-experiment-id",
              },
            }
          }
          t={[Function]}
          toolbarProps={
            Object {
              "actions": Object {
                "refresh": Object {
                  "action": [Function],
                  "id": "refreshBtn",
                  "title": "common:refresh",
                  "tooltip": "common:refreshList",
                },
              },
              "breadcrumbs": Array [
                Object {
                  "displayName": "common:experiments",
                  "href": "/experiments",
                },
              ],
              "pageTitle": "some-mock-experiment-id",
              "t": [Function],
            }
          }
          updateBanner={[MockFunction]}
          updateDialog={[MockFunction]}
          updateSnackbar={[MockFunction]}
          updateToolbar={[MockFunction]}
        />
      </WithStyles(DialogContent)>
      <WithStyles(DialogActions)>
        <WithStyles(Button)
          color="secondary"
          id="closeExperimentRecurringRunManagerBtn"
          onClick={[Function]}
        >
          common:close
        </WithStyles(Button)>
      </WithStyles(DialogActions)>
    </WithStyles(Dialog)>
  </div>
</div>
`;

exports[`ExperimentDetails removes all description text after second newline and replaces with an ellipsis 1`] = `
<div
  className="page"
>
  <div
    className="page"
  >
    <div
      className="cardRow"
    >
      <WithStyles(Paper)
        className="card recurringRunsCard"
        elevation={0}
        id="recurringRunsCard"
      >
        <div>
          <div
            className="cardTitle"
          >
            recurringRunConfigs
          </div>
          <div
            className="cardContent"
          >
            0 experiments:active
          </div>
          <WithStyles(Button)
            className="cardBtn"
            disableRipple={true}
            id="manageExperimentRecurringRunsBtn"
            onClick={[Function]}
          >
            common:manage
          </WithStyles(Button)>
        </div>
      </WithStyles(Paper)>
      <WithStyles(Paper)
        className="card runStatsCard"
        elevation={0}
        id="experimentDescriptionCard"
      >
        <div
          className="cardTitle"
        >
          <span>
            experimentDescription
          </span>
          <WithStyles(Button)
            className="popOutIcon popOutButton"
            id="expandExperimentDescriptionBtn"
            onClick={[Function]}
          >
            <WithStyles(Tooltip)
              title="common:readMore"
            >
              <pure(LaunchIcon)
                style={
                  Object {
                    "fontSize": 18,
                  }
                }
              />
            </WithStyles(Tooltip)>
          </WithStyles(Button)>
        </div>
        <div
          key="0"
          style={
            Object {
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          Line 1
        </div>
        <div
          key="1"
          style={
            Object {
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          Line 2
        </div>
        ...
      </WithStyles(Paper)>
    </div>
    <Toolbar
      actions={
        Object {
          "archive": Object {
            "action": [Function],
            "disabled": true,
            "disabledTitle": "common:selectResourceArchive",
            "id": "archiveBtn",
            "title": "common:archive",
            "tooltip": "common:archive",
          },
          "cloneRun": Object {
            "action": [Function],
            "disabled": true,
            "disabledTitle": "common:selectRunClone",
            "id": "cloneBtn",
            "style": Object {
              "minWidth": 100,
            },
            "title": "common:cloneRun",
            "tooltip": "common:copyRunInitialState",
          },
          "compare": Object {
            "action": [Function],
            "disabled": true,
            "disabledTitle": "common:selectRunsCompare",
            "id": "compareBtn",
            "style": Object {
              "minWidth": 125,
            },
            "title": "common:compareRuns",
            "tooltip": "common:compareUpToTenRuns",
          },
          "newRecurringRun": Object {
            "action": [Function],
            "icon": [Function],
            "id": "createNewRecurringRunBtn",
            "outlined": true,
            "style": Object {
              "minWidth": 195,
            },
            "title": "common:createRecurRun",
            "tooltip": "common:createNewRecurRun",
          },
          "newRun": Object {
            "action": [Function],
            "icon": [Function],
            "id": "createNewRunBtn",
            "outlined": true,
            "primary": true,
            "style": Object {
              "minWidth": 130,
            },
            "title": "common:createRun",
            "tooltip": "common:createNewRun",
          },
        }
      }
      breadcrumbs={Array []}
      pageTitle="runs"
      t={[Function]}
      topLevelToolbar={false}
    />
    <RunList
      experimentIdMask="some-mock-experiment-id"
      hideExperimentColumn={true}
      history={
        Object {
          "push": [MockFunction],
        }
      }
      location={Object {}}
      match={
        Object {
          "params": Object {
            "eid": "some-mock-experiment-id",
          },
        }
      }
      onError={[Function]}
      onSelectionChange={[Function]}
      selectedIds={Array []}
      storageState="STORAGESTATE_AVAILABLE"
      t={[Function]}
      toolbarProps={
        Object {
          "actions": Object {
            "refresh": Object {
              "action": [Function],
              "id": "refreshBtn",
              "title": "common:refresh",
              "tooltip": "common:refreshList",
            },
          },
          "breadcrumbs": Array [
            Object {
              "displayName": "common:experiments",
              "href": "/experiments",
            },
          ],
          "pageTitle": "some-mock-experiment-id",
          "t": [Function],
        }
      }
      updateBanner={[MockFunction]}
      updateDialog={[MockFunction]}
      updateSnackbar={[MockFunction]}
      updateToolbar={[MockFunction]}
    />
    <WithStyles(Dialog)
      classes={
        Object {
          "paper": "recurringRunsDialog",
        }
      }
      onClose={[Function]}
      open={false}
    >
      <WithStyles(DialogContent)>
        <RecurringRunsManager
          experimentId="some-mock-experiment-id"
          history={
            Object {
              "push": [MockFunction],
            }
          }
          location={Object {}}
          match={
            Object {
              "params": Object {
                "eid": "some-mock-experiment-id",
              },
            }
          }
          t={[Function]}
          toolbarProps={
            Object {
              "actions": Object {
                "refresh": Object {
                  "action": [Function],
                  "id": "refreshBtn",
                  "title": "common:refresh",
                  "tooltip": "common:refreshList",
                },
              },
              "breadcrumbs": Array [
                Object {
                  "displayName": "common:experiments",
                  "href": "/experiments",
                },
              ],
              "pageTitle": "some-mock-experiment-id",
              "t": [Function],
            }
          }
          updateBanner={[MockFunction]}
          updateDialog={[MockFunction]}
          updateSnackbar={[MockFunction]}
          updateToolbar={[MockFunction]}
        />
      </WithStyles(DialogContent)>
      <WithStyles(DialogActions)>
        <WithStyles(Button)
          color="secondary"
          id="closeExperimentRecurringRunManagerBtn"
          onClick={[Function]}
        >
          common:close
        </WithStyles(Button)>
      </WithStyles(DialogActions)>
    </WithStyles(Dialog)>
  </div>
</div>
`;

exports[`ExperimentDetails renders a page with no runs or recurring runs 1`] = `
<div
  className="page"
>
  <div
    className="page"
  >
    <div
      className="cardRow"
    >
      <WithStyles(Paper)
        className="card recurringRunsCard"
        elevation={0}
        id="recurringRunsCard"
      >
        <div>
          <div
            className="cardTitle"
          >
            recurringRunConfigs
          </div>
          <div
            className="cardContent"
          >
            0 experiments:active
          </div>
          <WithStyles(Button)
            className="cardBtn"
            disableRipple={true}
            id="manageExperimentRecurringRunsBtn"
            onClick={[Function]}
          >
            common:manage
          </WithStyles(Button)>
        </div>
      </WithStyles(Paper)>
      <WithStyles(Paper)
        className="card runStatsCard"
        elevation={0}
        id="experimentDescriptionCard"
      >
        <div
          className="cardTitle"
        >
          <span>
            experimentDescription
          </span>
          <WithStyles(Button)
            className="popOutIcon popOutButton"
            id="expandExperimentDescriptionBtn"
            onClick={[Function]}
          >
            <WithStyles(Tooltip)
              title="common:readMore"
            >
              <pure(LaunchIcon)
                style={
                  Object {
                    "fontSize": 18,
                  }
                }
              />
            </WithStyles(Tooltip)>
          </WithStyles(Button)>
        </div>
        <div
          key="0"
          style={
            Object {
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          mock experiment description
        </div>
      </WithStyles(Paper)>
    </div>
    <Toolbar
      actions={
        Object {
          "archive": Object {
            "action": [Function],
            "disabled": true,
            "disabledTitle": "common:selectResourceArchive",
            "id": "archiveBtn",
            "title": "common:archive",
            "tooltip": "common:archive",
          },
          "cloneRun": Object {
            "action": [Function],
            "disabled": true,
            "disabledTitle": "common:selectRunClone",
            "id": "cloneBtn",
            "style": Object {
              "minWidth": 100,
            },
            "title": "common:cloneRun",
            "tooltip": "common:copyRunInitialState",
          },
          "compare": Object {
            "action": [Function],
            "disabled": true,
            "disabledTitle": "common:selectRunsCompare",
            "id": "compareBtn",
            "style": Object {
              "minWidth": 125,
            },
            "title": "common:compareRuns",
            "tooltip": "common:compareUpToTenRuns",
          },
          "newRecurringRun": Object {
            "action": [Function],
            "icon": [Function],
            "id": "createNewRecurringRunBtn",
            "outlined": true,
            "style": Object {
              "minWidth": 195,
            },
            "title": "common:createRecurRun",
            "tooltip": "common:createNewRecurRun",
          },
          "newRun": Object {
            "action": [Function],
            "icon": [Function],
            "id": "createNewRunBtn",
            "outlined": true,
            "primary": true,
            "style": Object {
              "minWidth": 130,
            },
            "title": "common:createRun",
            "tooltip": "common:createNewRun",
          },
        }
      }
      breadcrumbs={Array []}
      pageTitle="runs"
      t={[Function]}
      topLevelToolbar={false}
    />
    <RunList
      experimentIdMask="some-mock-experiment-id"
      hideExperimentColumn={true}
      history={
        Object {
          "push": [MockFunction],
        }
      }
      location={Object {}}
      match={
        Object {
          "params": Object {
            "eid": "some-mock-experiment-id",
          },
        }
      }
      onError={[Function]}
      onSelectionChange={[Function]}
      selectedIds={Array []}
      storageState="STORAGESTATE_AVAILABLE"
      t={[Function]}
      toolbarProps={
        Object {
          "actions": Object {
            "refresh": Object {
              "action": [Function],
              "id": "refreshBtn",
              "title": "common:refresh",
              "tooltip": "common:refreshList",
            },
          },
          "breadcrumbs": Array [
            Object {
              "displayName": "common:experiments",
              "href": "/experiments",
            },
          ],
          "pageTitle": "some-mock-experiment-id",
          "t": [Function],
        }
      }
      updateBanner={[MockFunction]}
      updateDialog={[MockFunction]}
      updateSnackbar={[MockFunction]}
      updateToolbar={[MockFunction]}
    />
    <WithStyles(Dialog)
      classes={
        Object {
          "paper": "recurringRunsDialog",
        }
      }
      onClose={[Function]}
      open={false}
    >
      <WithStyles(DialogContent)>
        <RecurringRunsManager
          experimentId="some-mock-experiment-id"
          history={
            Object {
              "push": [MockFunction],
            }
          }
          location={Object {}}
          match={
            Object {
              "params": Object {
                "eid": "some-mock-experiment-id",
              },
            }
          }
          t={[Function]}
          toolbarProps={
            Object {
              "actions": Object {
                "refresh": Object {
                  "action": [Function],
                  "id": "refreshBtn",
                  "title": "common:refresh",
                  "tooltip": "common:refreshList",
                },
              },
              "breadcrumbs": Array [
                Object {
                  "displayName": "common:experiments",
                  "href": "/experiments",
                },
              ],
              "pageTitle": "some-mock-experiment-id",
              "t": [Function],
            }
          }
          updateBanner={[MockFunction]}
          updateDialog={[MockFunction]}
          updateSnackbar={[MockFunction]}
          updateToolbar={[MockFunction]}
        />
      </WithStyles(DialogContent)>
      <WithStyles(DialogActions)>
        <WithStyles(Button)
          color="secondary"
          id="closeExperimentRecurringRunManagerBtn"
          onClick={[Function]}
        >
          common:close
        </WithStyles(Button)>
      </WithStyles(DialogActions)>
    </WithStyles(Dialog)>
  </div>
</div>
`;

exports[`ExperimentDetails uses an empty string if the experiment has no description 1`] = `
<div
  className="page"
>
  <div
    className="page"
  >
    <div
      className="cardRow"
    >
      <WithStyles(Paper)
        className="card recurringRunsCard"
        elevation={0}
        id="recurringRunsCard"
      >
        <div>
          <div
            className="cardTitle"
          >
            recurringRunConfigs
          </div>
          <div
            className="cardContent"
          >
            0 experiments:active
          </div>
          <WithStyles(Button)
            className="cardBtn"
            disableRipple={true}
            id="manageExperimentRecurringRunsBtn"
            onClick={[Function]}
          >
            common:manage
          </WithStyles(Button)>
        </div>
      </WithStyles(Paper)>
      <WithStyles(Paper)
        className="card runStatsCard"
        elevation={0}
        id="experimentDescriptionCard"
      >
        <div
          className="cardTitle"
        >
          <span>
            experimentDescription
          </span>
          <WithStyles(Button)
            className="popOutIcon popOutButton"
            id="expandExperimentDescriptionBtn"
            onClick={[Function]}
          >
            <WithStyles(Tooltip)
              title="common:readMore"
            >
              <pure(LaunchIcon)
                style={
                  Object {
                    "fontSize": 18,
                  }
                }
              />
            </WithStyles(Tooltip)>
          </WithStyles(Button)>
        </div>
        <div
          key="0"
          style={
            Object {
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        />
      </WithStyles(Paper)>
    </div>
    <Toolbar
      actions={
        Object {
          "archive": Object {
            "action": [Function],
            "disabled": true,
            "disabledTitle": "common:selectResourceArchive",
            "id": "archiveBtn",
            "title": "common:archive",
            "tooltip": "common:archive",
          },
          "cloneRun": Object {
            "action": [Function],
            "disabled": true,
            "disabledTitle": "common:selectRunClone",
            "id": "cloneBtn",
            "style": Object {
              "minWidth": 100,
            },
            "title": "common:cloneRun",
            "tooltip": "common:copyRunInitialState",
          },
          "compare": Object {
            "action": [Function],
            "disabled": true,
            "disabledTitle": "common:selectRunsCompare",
            "id": "compareBtn",
            "style": Object {
              "minWidth": 125,
            },
            "title": "common:compareRuns",
            "tooltip": "common:compareUpToTenRuns",
          },
          "newRecurringRun": Object {
            "action": [Function],
            "icon": [Function],
            "id": "createNewRecurringRunBtn",
            "outlined": true,
            "style": Object {
              "minWidth": 195,
            },
            "title": "common:createRecurRun",
            "tooltip": "common:createNewRecurRun",
          },
          "newRun": Object {
            "action": [Function],
            "icon": [Function],
            "id": "createNewRunBtn",
            "outlined": true,
            "primary": true,
            "style": Object {
              "minWidth": 130,
            },
            "title": "common:createRun",
            "tooltip": "common:createNewRun",
          },
        }
      }
      breadcrumbs={Array []}
      pageTitle="runs"
      t={[Function]}
      topLevelToolbar={false}
    />
    <RunList
      experimentIdMask="some-mock-experiment-id"
      hideExperimentColumn={true}
      history={
        Object {
          "push": [MockFunction],
        }
      }
      location={Object {}}
      match={
        Object {
          "params": Object {
            "eid": "some-mock-experiment-id",
          },
        }
      }
      onError={[Function]}
      onSelectionChange={[Function]}
      selectedIds={Array []}
      storageState="STORAGESTATE_AVAILABLE"
      t={[Function]}
      toolbarProps={
        Object {
          "actions": Object {
            "refresh": Object {
              "action": [Function],
              "id": "refreshBtn",
              "title": "common:refresh",
              "tooltip": "common:refreshList",
            },
          },
          "breadcrumbs": Array [
            Object {
              "displayName": "common:experiments",
              "href": "/experiments",
            },
          ],
          "pageTitle": "some-mock-experiment-id",
          "t": [Function],
        }
      }
      updateBanner={[MockFunction]}
      updateDialog={[MockFunction]}
      updateSnackbar={[MockFunction]}
      updateToolbar={[MockFunction]}
    />
    <WithStyles(Dialog)
      classes={
        Object {
          "paper": "recurringRunsDialog",
        }
      }
      onClose={[Function]}
      open={false}
    >
      <WithStyles(DialogContent)>
        <RecurringRunsManager
          experimentId="some-mock-experiment-id"
          history={
            Object {
              "push": [MockFunction],
            }
          }
          location={Object {}}
          match={
            Object {
              "params": Object {
                "eid": "some-mock-experiment-id",
              },
            }
          }
          t={[Function]}
          toolbarProps={
            Object {
              "actions": Object {
                "refresh": Object {
                  "action": [Function],
                  "id": "refreshBtn",
                  "title": "common:refresh",
                  "tooltip": "common:refreshList",
                },
              },
              "breadcrumbs": Array [
                Object {
                  "displayName": "common:experiments",
                  "href": "/experiments",
                },
              ],
              "pageTitle": "some-mock-experiment-id",
              "t": [Function],
            }
          }
          updateBanner={[MockFunction]}
          updateDialog={[MockFunction]}
          updateSnackbar={[MockFunction]}
          updateToolbar={[MockFunction]}
        />
      </WithStyles(DialogContent)>
      <WithStyles(DialogActions)>
        <WithStyles(Button)
          color="secondary"
          id="closeExperimentRecurringRunManagerBtn"
          onClick={[Function]}
        >
          common:close
        </WithStyles(Button)>
      </WithStyles(DialogActions)>
    </WithStyles(Dialog)>
  </div>
</div>
`;
